    external: procps_users new exported function
    external: procps_uptime_snprint uses given upseconds
    external: procps_container_uptime
    external: meminfo api adds SecPageTables, Unaccepted
    external: pids api now provides open file descriptors
    external: 'info' parm removed from all 'VAL' macros    issue #332
    external: Add procps_sigmask_names
    external: Add PIDS_CAP__PRM Permitted Capabilities
  * pgrep: select process by environment variable          issue #167
  * pgrep: Rework pidfile reading to include stdin         issue #318
  * ps: Add environ field
  * ps: Add htprv and htshr fields for HugeTables
  * ps: restore lost tasks for options --sort with -H      issue #304
  * ps: add 'docker' containers field, similar to 'lxc'
  * ps: Restore AIX free-format                            issue #323
  * ps: can display open file descriptors for each task
  * ps: Fix signames scanning                              issue #341
  * ps: Add -o pcap to show permitted capabilities
  * slabtop: Add --human option for slab size
  * sysctl: Add glob excludes                              merge #206
  * top: added a 'CLS' scheduling class field, like ps
  * top: exploit library addition of 'disk sleep'          issue #265
  * top: add 'docker' containers field, similar to 'lxc'
  * top: provides additional control over colors
  * top: can display open file descriptors for each task
  * top: corrected cpu % for hosts with qemu processes     issue #339
  * top: remains functional if /proc mounted subset=pid
  * uptime: Add container uptime option                    issue #300
  * w: Don't segfault with -s option                       issue #301
  * w: Cache pids list                                     issue #305
  * w: Add container uptime option
  * watch: use clock_gettime                               issue #295
  * hugetop: a new utility to show huge page information   merge #214

procps-ng-4.0.4
---------------
  * library (API & ABI unchanged)