@@ -89,6 +89,8 @@ int procps_ns_read_pid (const int pid, struct procps_ns *nsp);
 // Signal names
 int procps_sigmask_names(char *restrict const outbuf, const char *restrict const sigmask, const size_t len);
 
+// Capability names
+int procps_capability_names(char *restrict const buf, const char *restrict const capmask, const size_t buflen);
 #ifdef __cplusplus
 }
 #endif
